--- a/index.html
+++ b/index.html
@@ -70,30 +70,30 @@
         <section class="team">
             <h2 class="our-team">Our Team</h2>
             <ul class="team-list">
-                <li><img src="images/img(9).jpg" 
+                <li><img src="images/img(9).jpg"
                     alt="Mark Guerrero"
                     width="264">
+                    <h3>Mark Guerrero</h3>
+                    <p>Product Designerp</p>
                 </li>
-                <h3>Mark Guerrero</h3>
-                <pProduct Designerp>
                 <li><img src="images/img(10).jpg" 
                     alt="Tom Ford"
                     width="264">
-                    </li>
-                <h3>Tom Ford</h3>
-                <p>Frontend Developer</p>
+                    <h3>Tom Ford</h3>
+                    <p>Frontend Developer</p>
+                </li>
                 <li><img src="images/img(11).jpg" 
                     alt="Camila Garcia"
                     width="264">
+                    <h3>Camila Garcia</h3>
+                    <p>Marketing</p>
                 </li>
-                <h3>Camila Garcia</h3>
-                <p>Marketing</p>
                 <li><img src="images/img(12).jpg" 
                     alt="Daniel Wilsonli"
                     width="264">
+                    <h3>Daniel Wilson</h3>
+                    <p>UI Designer</p>
                 </li>
-                <h3>Daniel Wilson</h3>
-                <p>UI Designer</p>
             </ul>
         </section>
 
@@ -101,8 +101,6 @@
             <h2 class="portfolio-title">Our Portfolio</h2>
         <ul>
             <li class="portfolio-item">
-                <img src="images/img(3)(1).jpg" 
-                alt="Banking App" 
                 class="portfolio-image"
                 width="360"
                 height="300">
@@ -129,6 +127,7 @@
                 <h3 class="portfolio-item-title">Meditation App</h3>
                 <p class="portfolio-text">App</p>
             </li>
+            
             <li class="portfolio-item">
                 <img src="images/img(6).jpg" 
                 alt="Taxi Service" 
