--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet"   href="./css/styles.css">
 </head>
 <body>
     <header>
@@ -127,7 +133,7 @@
                 <h3 class="portfolio-item-title">Meditation App</h3>
                 <p class="portfolio-text">App</p>
             </li>
-            
+
             <li class="portfolio-item">
                 <img src="images/img(6).jpg" 
                 alt="Taxi Service" 
