--- a/index.html
+++ b/index.html
@@ -168,9 +168,8 @@
     </main>
 
     <footer class="footer">
-        <a href="/" 
-        class="logo-footer"
-        class="logo-footer-accent">WEB><span>STUDIO</span>
+        <a href="/" class="logo-footer">
+        WEB<span class="footer-accent">STUDIO</span>
         </a>
         <p class="footer-text">
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
