--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
     <footer class="footer">
         <a href="/" class="logo-footer">
-        WEB<span class="footer-accent">STUDIO</span>
+        WEB<span class=".logo-footer-accent">STUDIO</span>
         </a>
         <p class="footer-text">
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
