--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
     <link rel="stylesheet"   href="./css/styles.css">
 </head>
 <body>
-    <header>
+    <header >
         <nav>
-            <a href="/" class="logo">
+            <a href="./index.html" class="logo">
                 <span class="logo-accent">WEB</span>STUDIO</a>
+
             <ul class="nav-list">
                 <li class="nav-item"><a href="" class="nav-link">Studio</a></li>
                 <li class="nav-item"><a href="" class="nav-link">Portfolio</a></li>
