--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header >
         <nav>
             <a href="./index.html" class="logo">
-                <span class="logo-accent">WEB</span>STUDIO</a>
+                <span class="logo-accent">Web</span>Studio</a>
 
             <ul class="nav-list">
                 <li class="nav-item"><a href="" class="nav-link">Studio</a></li>
