--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
             <h2 class="portfolio-title">Our Portfolio</h2>
         <ul>
             <li class="portfolio-item">
-                class="portfolio-image"
+                <img src="images/img(3)(1).jpg" 
+                alt="Banking App"
                 width="360"
                 height="300">
                 <h3 class="portfolio-item-title">Banking App</h3>
