--- a/index.html
+++ b/index.html
@@ -17,16 +17,15 @@
 </head>
 <body>
     <header >
-        <nav>
-            <a href="./index.html" class="logo">
-                <span class="logo-accent">Web</span>Studio</a>
-
+        <a href="./index.html" class="logo"></a>
+            <nav>
+                Web<span class="logo-accent">Studio</span></a>
             <ul class="nav-list">
                 <li class="nav-item"><a href="" class="nav-link">Studio</a></li>
                 <li class="nav-item"><a href="" class="nav-link">Portfolio</a></li>
                 <li class="nav-item"><a href="" class="nav-link">Contacts</a></li>
             </ul>
-        </nav>
+            </nav>
         <address>
             <ul class="address-list">
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
