--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header >
         <nav>
             <a href="./index.html" class="logo"></a>
-                Web<span class="logo-accent">Studio</span></a>
+                Web<span class=".logo-accent">Studio</span>
             <ul class="nav-list">
                 <li class="nav-item"><a href="" class="nav-link">Studio</a></li>
                 <li class="nav-item"><a href="" class="nav-link">Portfolio</a></li>
@@ -170,7 +170,7 @@
 
     <footer class="footer">
         <a href="/" class="logo-footer">
-        WEB<span class=".logo-footer-accent">STUDIO</span>
+        Web<span class=".logo-footer-accent">Studio</span>
         </a>
         <p class="footer-text">
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
