--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 </head>
 <body>
     <header >
-        <nav>
+        <nav class="nav">
             <a href="./index.html" class="logo"></a>
-                Web<span class=".logo-accent">Studio</span>
+                <span class=".logo-accent">Web</span>Studio
             <ul class="nav-list">
                 <li class="nav-item"><a href="" class="nav-link">Studio</a></li>
                 <li class="nav-item"><a href="" class="nav-link">Portfolio</a></li>
@@ -169,9 +169,8 @@
     </main>
 
     <footer class="footer">
-        <a href="/" class="logo-footer">
-        Web<span class=".logo-footer-accent">Studio</span>
-        </a>
+        <a href="/" class="logo-footer"></a>
+        <span class=".logo-footer-accent">Web</span>Studio
         <p class="footer-text">
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
