--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/styles.css">
     <title>WebStudio</title>
     <link
     rel="stylesheet"
@@ -13,13 +14,13 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet"   href="./css/styles.css">
 </head>
+
 <body>
     <header >
         <nav class="nav">
             <a href="./index.html" class="logo"></a>
-                <span class=".logo-accent">Web</span>Studio
+                Web<span class=".logo-accent">Studio</span>
             <ul class="nav-list">
                 <li class="nav-item"><a href="" class="nav-link">Studio</a></li>
                 <li class="nav-item"><a href="" class="nav-link">Portfolio</a></li>
@@ -170,7 +171,6 @@
 
     <footer class="footer">
         <a href="/" class="logo-footer"></a>
-        <span class=".logo-footer-accent">Web</span>Studio
         <p class="footer-text">
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
