--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 <body>
     <header >
         <nav class="nav">
-            <a href="./index.html" class="logo"></a>
+            <a> href="./index.html" class="logo">
                 Web<span class=".logo-accent">Studio</span>
+            </a>
             <ul class="nav-list">
                 <li class="nav-item"><a href="" class="nav-link">Studio</a></li>
                 <li class="nav-item"><a href="" class="nav-link">Portfolio</a></li>
