--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <header >
         <nav class="nav">
-            <a> href="./index.html" class="logo">
+            <a href="./index.html" class="logo">
                 Web<span class=".logo-accent">Studio</span>
             </a>
             <ul class="nav-list">
