--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header >
         <nav class="nav">
             <a href="./index.html" class="logo">
-                Web<span class=".logo-accent">Studio</span>
+                Web<span class="logo-accent">Studio</span>
             </a>
             <ul class="nav-list">
                 <li class="nav-item"><a href="" class="nav-link">Studio</a></li>
