--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
 <body>
     <header >
         <nav class="nav">
-            <a href="./index.html" class="logo">
-                Web<span class="logo-accent">Studio</span>
-            </a>
             <ul class="nav-list">
+                <li class="nav-item">
+                    <a href="./index.html" class="logo">
+                Web<span class="logo-accent">Studio</span>
+                    </a>
+                </li>
                 <li class="nav-item"><a href="" class="nav-link">Studio</a></li>
                 <li class="nav-item"><a href="" class="nav-link">Portfolio</a></li>
                 <li class="nav-item"><a href="" class="nav-link">Contacts</a></li>
