--- a/index.html
+++ b/index.html
@@ -19,15 +19,21 @@
 <body>
     <header >
         <nav class="nav">
+            <a href="./index.html" class="logo">
+                Web<span class="logo-accent">Studio</span>
+            </a>
             <ul class="nav-list">
                 <li class="nav-item">
-                    <a href="./index.html" class="logo">
-                Web<span class="logo-accent">Studio</span>
-                    </a>
+                    <a href="./index.html" class="nav-link">Studio</a>
                 </li>
-                <li class="nav-item"><a href="" class="nav-link">Studio</a></li>
-                <li class="nav-item"><a href="" class="nav-link">Portfolio</a></li>
-                <li class="nav-item"><a href="" class="nav-link">Contacts</a></li>
+                <li class="nav-item">
+                    <a href="" class="nav-link">Portfolio</a>
+                </li>
+                <li class="nav-item">
+                    <a href="" class="nav-link">Contacts</a>
+                </li>
+            </ul>
+
             </ul>
         </nav>
         <address>
