--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </li>
             </ul>
         </nav>
-        <address>
+        <address class="address">
             <ul class="address-list">
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
