--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </section>
         
         <section class="features">
-            <h2 class="features-title">/</h2>
+            <h2 class="features-title"></h2>
             <ul class="features-list">
                 <li> 
                     <h3 class="feature-list">Strategy</h3>
