--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
             <h2 class="features-title"></h2>
             <ul class="features-list">
                 <li> 
-                    <h3 class="feature-list">Strategy</h3>
+                    <h3 class="features-title">Strategy</h3>
                     <p class="feature-text">
                         Our goal is to identify the business problem to walk away with the perfect and creative solution.
                     </p>
                 </li>
                 <li>
-                    <h3 class="feature-list">Punctuality</h3>
+                    <h3 class="features-title">Punctuality</h3>
                     <p class="feature-text">
                         Bring the key message to the brand's audience for the best price within the shortest possible time.
                     </p>
                 </li>
                 <li>
-                    <h3 class="feature-list">Diligence</h3>
+                    <h3 class="features-title">Diligence</h3>
                     <p class="feature-text">
                         Research and confirm brands with the strongest digital growth opportunities and minimize risk.
                     </p>
