--- a/index.html
+++ b/index.html
@@ -84,29 +84,29 @@
         <section class="team">
             <h2 class="our-team">Our Team</h2>
             <ul class="team-list">
-                <li><img src="images/img(9).jpg"
+                <li class="team-item"><img src="images/img(9).jpg"
                     alt="Mark Guerrero"
                     width="264">
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designerp</p>
+                    <h3 class="team-name">Mark Guerrero</h3>
+                    <p class="team-role">Product Designerp</p>
                 </li>
-                <li><img src="images/img(10).jpg" 
+                <li class="team-item"><img src="images/img(10).jpg" 
                     alt="Tom Ford"
                     width="264">
                     <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                    <p class="team-role">Frontend Developer</p>
                 </li>
-                <li><img src="images/img(11).jpg" 
+                <li class="team-item"><img src="images/img(11).jpg" 
                     alt="Camila Garcia"
                     width="264">
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
+                    <h3 class="team-name">Camila Garcia</h3>
+                    <p class="team-role">Marketing</p>
                 </li>
-                <li><img src="images/img(12).jpg" 
+                <li class="team-item"><img src="images/img(12).jpg" 
                     alt="Daniel Wilsonli"
                     width="264">
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                    <h3 class="team-name">Daniel Wilson</h3>
+                    <p class="team-role">UI Designer</p>
                 </li>
             </ul>
         </section>
