--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     <p class="team-role">Marketing</p>
                 </li>
                 <li class="team-item"><img src="images/img(12).jpg" 
-                    alt="Daniel Wilsonli"
+                    alt="Daniel Wilson"
                     width="264">
                     <h3 class="team-name">Daniel Wilson</h3>
                     <p class="team-role">UI Designer</p>
