--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     </p>
                 </li>
                 <li>
-                    <h3 class="feature-list">Technologies</h3>
+                    <h3 class="features-title">Technologies</h3>
                     <p class="feature-text">
                         Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
                     </p>
