--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <li class="team-item"><img src="images/img(10).jpg" 
                     alt="Tom Ford"
                     width="264">
-                    <h3>Tom Ford</h3>
+                    <h3  class="team-name">Tom Ford</h3>
                     <p class="team-role">Frontend Developer</p>
                 </li>
                 <li class="team-item"><img src="images/img(11).jpg" 
