--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <h2 class="portfolio-title">Our Portfolio</h2>
         <ul>
             <li class="portfolio-item">
-                <img src="images/img(3)(1).jpg" 
+                <img src="./images/img-3-1.jpg" 
                 alt="Banking App"
                 width="360"
                 height="300">
@@ -124,7 +124,7 @@
             </li>
 
             <li class="portfolio-item">
-                <img src="images/img(4).jpg" 
+                <img src="./images/img(4).jpg" 
                 alt="Cashless Payment" 
                 class="portfolio-image"
                 width="360"
@@ -134,7 +134,7 @@
             </li>
 
             <li class="portfolio-item">
-                <img src="images/img(5).jpg" 
+                <img src="./images/img(5).jpg" 
                 alt="Meditation App" 
                 class="portfolio-image"
                 width="360"
@@ -144,7 +144,7 @@
             </li>
 
             <li class="portfolio-item">
-                <img src="images/img(6).jpg" 
+                <img src="./images/img(6).jpg" 
                 alt="Taxi Service" 
                 class="portfolio-image"
                 width="360"
@@ -154,7 +154,7 @@
             </li>
 
             <li class="portfolio-item">
-                <img src="images/img(7).jpg" 
+                <img src="./images/img(7).jpg" 
                 alt="Screen Illustrations"
                 class="portfolio-image"
                 width="360"
@@ -164,7 +164,7 @@
             </li>
 
             <li class="portfolio-item">
-                <img src="images/img(8).jpg" 
+                <img src="./images/img(8).jpg" 
                 alt="Online Courses" 
                 class="portfolio-image"
                 width="360"
