--- a/index.html
+++ b/index.html
@@ -177,7 +177,9 @@
     </main>
 
     <footer class="footer">
-        <a href="/" class="logo-footer"></a>
+        <a href="./index.html" class="footer-logo">
+                Web<span class="logo-accent">Studio</span>
+        </a>
         <p class="footer-text">
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
