--- a/index.html
+++ b/index.html
@@ -84,27 +84,19 @@
         <section class="team">
             <h2 class="our-team">Our Team</h2>
             <ul class="team-list">
-                <li class="team-item"><img src="images/img(9).jpg"
-                    alt="Mark Guerrero"
-                    width="264">
+                <li class="team-item"><img src="images/img(9).jpg" alt="Mark Guerrero" width="264">
                     <h3 class="team-name">Mark Guerrero</h3>
                     <p class="team-role">Product Designerp</p>
                 </li>
-                <li class="team-item"><img src="images/img(10).jpg" 
-                    alt="Tom Ford"
-                    width="264">
+                <li class="team-item"><img src="images/img(10).jpg" alt="Tom Ford" width="264">
                     <h3  class="team-name">Tom Ford</h3>
                     <p class="team-role">Frontend Developer</p>
                 </li>
-                <li class="team-item"><img src="images/img(11).jpg" 
-                    alt="Camila Garcia"
-                    width="264">
+                <li class="team-item"><img src="images/img(11).jpg" alt="Camila Garcia" width="264">
                     <h3 class="team-name">Camila Garcia</h3>
                     <p class="team-role">Marketing</p>
                 </li>
-                <li class="team-item"><img src="images/img(12).jpg" 
-                    alt="Daniel Wilson"
-                    width="264">
+                <li class="team-item"><img src="images/img(12).jpg" alt="Daniel Wilson" width="264">
                     <h3 class="team-name">Daniel Wilson</h3>
                     <p class="team-role">UI Designer</p>
                 </li>
@@ -115,60 +107,37 @@
             <h2 class="portfolio-title">Our Portfolio</h2>
         <ul>
             <li class="portfolio-item">
-                <img src="./images/img-3-1.jpg" 
-                alt="Banking App"
-                width="360"
-                height="300">
+                <img src="./images/img-3-1.jpg" alt="Banking App" width="360" height="300">
                 <h3 class="portfolio-item-title">Banking App</h3>
                 <p class="portfolio-text">App</p>
             </li>
 
             <li class="portfolio-item">
-                <img src="./images/img4.jpg" 
-                alt="Cashless Payment" 
-                class="portfolio-image"
-                width="360"
-                height="300">
+                <img src="./images/img4.jpg" alt="Cashless Payment" class="portfolio-image" width="360" height="300">
                 <h3 class="portfolio-item-title">Cashless Payment</h3>
                 <p class="portfolio-text">Marketing</p>
             </li>
 
             <li class="portfolio-item"> 
-                <img src="./images/img5.jpg" 
-                alt="Meditation App" 
-                class="portfolio-image"
-                width="360"
-                height="300">
+                <img src="./images/img5.jpg" alt="Meditation App" class="portfolio-image" width="360" height="300">
                 <h3 class="portfolio-item-title">Meditation App</h3>
                 <p class="portfolio-text">App</p>
             </li>
 
             <li class="portfolio-item">
-                <img src="./images/img6.jpg" 
-                alt="Taxi Service" 
-                class="portfolio-image"
-                width="360"
-                height="300">
+                <img src="./images/img6.jpg" alt="Taxi Service" class="portfolio-image" width="360" height="300">
                 <h3 class="portfolio-item-title">Taxi Service</h3>
                 <p class="portfolio-text">Marketing</p>
             </li>
 
             <li class="portfolio-item">
-                <img src="./images/img7.jpg" 
-                alt="Screen Illustrations"
-                class="portfolio-image"
-                width="360"
-                height="300">
+                <img src="./images/img7.jpg" alt="Screen Illustrations" class="portfolio-image" width="360" height="300">
                 <h3 class="portfolio-item-title">Screen Illustrations</h3>
                 <p class="portfolio-text">Design</p>
             </li>
 
             <li class="portfolio-item">
-                <img src="./images/img8.jpg" 
-                alt="Online Courses" 
-                class="portfolio-image"
-                width="360"
-                height="300">
+                <img src="./images/img8.jpg" alt="Online Courses" class="portfolio-image"width="360" height="300">
                 <h3 class="portfolio-item-title">Online Courses</h3>
                 <p class="portfolio-text">Marketing</p>
             </li>
@@ -178,7 +147,7 @@
 
     <footer class="footer">
         <a href="./index.html" class="footer-logo">
-                Web<span class="logo-accent">Studio</span>
+                Web<span class="-footer-logo-accent">Studio</span>
         </a>
         <p class="footer-text">
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
