--- a/index.html
+++ b/index.html
@@ -84,19 +84,19 @@
         <section class="team">
             <h2 class="our-team">Our Team</h2>
             <ul class="team-list">
-                <li class="team-item"><img src="images/img(9).jpg" alt="Mark Guerrero" width="264">
+                <li class="team-item"><img src="images/img9.jpg" alt="Mark Guerrero" width="264">
                     <h3 class="team-name">Mark Guerrero</h3>
                     <p class="team-role">Product Designerp</p>
                 </li>
-                <li class="team-item"><img src="images/img(10).jpg" alt="Tom Ford" width="264">
+                <li class="team-item"><img src="images/img10.jpg" alt="Tom Ford" width="264">
                     <h3  class="team-name">Tom Ford</h3>
                     <p class="team-role">Frontend Developer</p>
                 </li>
-                <li class="team-item"><img src="images/img(11).jpg" alt="Camila Garcia" width="264">
+                <li class="team-item"><img src="images/img11.jpg" alt="Camila Garcia" width="264">
                     <h3 class="team-name">Camila Garcia</h3>
                     <p class="team-role">Marketing</p>
                 </li>
-                <li class="team-item"><img src="images/img(12).jpg" alt="Daniel Wilson" width="264">
+                <li class="team-item"><img src="images/img12.jpg" alt="Daniel Wilson" width="264">
                     <h3 class="team-name">Daniel Wilson</h3>
                     <p class="team-role">UI Designer</p>
                 </li>
@@ -137,7 +137,7 @@
             </li>
 
             <li class="portfolio-item">
-                <img src="images/img8.jpg" alt="Online Courses" class="portfolio-image"width="360" height="300">
+                <img src="images/img8.jpg" alt="Online Courses" class="portfolio-image" width="360" height="300">
                 <h3 class="portfolio-item-title">Online Courses</h3>
                 <p class="portfolio-text">Marketing</p>
             </li>
