--- a/index.html
+++ b/index.html
@@ -107,37 +107,37 @@
             <h2 class="portfolio-title">Our Portfolio</h2>
         <ul>
             <li class="portfolio-item">
-                <img src="images/img-3-1.jpg" alt="Banking App" width="360" height="300">
+                <img src="./images/img-3-1.jpg" alt="Banking App" width="360" height="300">
                 <h3 class="portfolio-item-title">Banking App</h3>
                 <p class="portfolio-text">App</p>
             </li>
 
             <li class="portfolio-item">
-                <img src="images/img4.jpg" alt="Cashless Payment" class="portfolio-image" width="360" height="300">
+                <img src="./images/img4.jpg" alt="Cashless Payment" class="portfolio-image" width="360" height="300">
                 <h3 class="portfolio-item-title">Cashless Payment</h3>
                 <p class="portfolio-text">Marketing</p>
             </li>
 
             <li class="portfolio-item"> 
-                <img src="images/img5.jpg" alt="Meditation App" class="portfolio-image" width="360" height="300">
+                <img src="./images/img5.jpg" alt="Meditation App" class="portfolio-image" width="360" height="300">
                 <h3 class="portfolio-item-title">Meditation App</h3>
                 <p class="portfolio-text">App</p>
             </li>
 
             <li class="portfolio-item">
-                <img src="images/img6.jpg" alt="Taxi Service" class="portfolio-image" width="360" height="300">
+                <img src="./images/img6.jpg" alt="Taxi Service" class="portfolio-image" width="360" height="300">
                 <h3 class="portfolio-item-title">Taxi Service</h3>
                 <p class="portfolio-text">Marketing</p>
             </li>
 
             <li class="portfolio-item">
-                <img src="images/img7.jpg" alt="Screen Illustrations" class="portfolio-image" width="360" height="300">
+                <img src="./images/img7.jpg" alt="Screen Illustrations" class="portfolio-image" width="360" height="300">
                 <h3 class="portfolio-item-title">Screen Illustrations</h3>
                 <p class="portfolio-text">Design</p>
             </li>
 
             <li class="portfolio-item">
-                <img src="images/img8.jpg" alt="Online Courses" class="portfolio-image" width="360" height="300">
+                <img src="./images/img8.jpg" alt="Online Courses" class="portfolio-image" width="360" height="300">
                 <h3 class="portfolio-item-title">Online Courses</h3>
                 <p class="portfolio-text">Marketing</p>
             </li>
